--- a/dashboard.css
+++ b/dashboard.css
@@ -22,6 +22,20 @@
     --blackColor:black;
     --grayColor:gray;
 }
+::-webkit-scrollbar {
+    width: 15px;
+  }
+  
+::-webkit-scrollbar-thumb {
+    background-color: var(--800);
+    border-radius: 50px;
+    border: 2px solid #c2ddf5;
+}
+  
+::-webkit-scrollbar-track {
+    background-color: #c2ddf5;
+    border-radius: 5px;
+}
 
 a {
     text-decoration: none;
