--- a/dashboard.css
+++ b/dashboard.css
@@ -26,17 +26,18 @@
     width: 15px;
   }
   
-::-webkit-scrollbar-thumb {
+  ::-webkit-scrollbar-thumb {
     background-color: var(--800);
     border-radius: 50px;
     border: 2px solid #c2ddf5;
-}
+  }
   
-::-webkit-scrollbar-track {
+  ::-webkit-scrollbar-track {
     background-color: #c2ddf5;
-    border-radius: 5px;
+  }
+#bg{
+    background-color:#c2ddf5 ;
 }
-
 a {
     text-decoration: none;
 }
@@ -59,7 +60,6 @@ body {
 }
 
 .main {
-    /* height: 200vh; */
     min-height: 100vh;
     width: 100%;
     overflow: hidden;
@@ -67,7 +67,12 @@ body {
     background-color: #fafbfe;
     margin-left: 70px;
 }
-
+#Navbar{
+    height: 8vh;
+    width: 100%;
+    z-index: 999;
+    background-color: var(--200);
+}
 #sidebar {
     height: 100vh;
     position: fixed;
