--- a/dashboard.css
+++ b/dashboard.css
@@ -33,7 +33,7 @@
   }
   
   ::-webkit-scrollbar-track {
-    background-color: #c2ddf5;
+    background-color: #f2f8fd;
   }
 #bg{
     background-color:#c2ddf5 ;
