--- a/dashboard.css
+++ b/dashboard.css
@@ -220,3 +220,17 @@ p {
 .dropdown-menu .dropdown-item:hover {
     background-color: #f0f0f0;
 }
+#clock{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: auto;
+    color: black;
+    font-size: 1.25rem;
+    border-radius: 8px;
+    border: 0.5px solid var(--700);
+background: linear-gradient(225deg, #afc7dd, #d0ecff);
+box-shadow:  -6px 6px 15px #a9c0d5,
+             6px -6px 15px #dbfaff;
+}
