--- a/dashboard.css
+++ b/dashboard.css
@@ -226,7 +226,7 @@ p {
     align-items: center;
     height: 100%;
     width: auto;
-    color: black;
+    color: var(--900);
     font-size: 1.25rem;
     border-radius: 8px;
     border: 0.5px solid var(--700);
