--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="dashboard.css">
+    <link rel="stylesheet" href="\InvenHub-Frontend\static\css\dashboard.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
 </head>
 
@@ -56,44 +56,44 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-item">
                     <a href="dashboard.html" class="sidebar-link">
-                        <i><img height="25px" width="25px" src="images/icons8-home (2).svg" alt=""></i>
+                        <i><img height="25px" width="25px" src="\InvenHub-Frontend\static\images/icons8-home (2).svg" alt=""></i>
                         <span style="margin-left: 20px;">Dashboard</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
                     <a href="inventory.html" class="sidebar-link">
-                        <i><img height="25px" width="25px" src="images/icons8-inventory-50.png" alt="warehouse-1"/></i>
+                        <i><img height="25px" width="25px" src="\InvenHub-Frontend\static\images/icons8-inventory-50.png" alt="warehouse-1"/></i>
                         <span style="margin-left: 20px;">Inventory</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
                     <a href="reports.html" class="sidebar-link">
-                        <i><img height="25px" width="25px" src="images/icons8-graph-48.png" alt="warehouse-1"/></i>
+                        <i><img height="25px" width="25px" src="\InvenHub-Frontend\static\images/icons8-graph-48.png" alt="warehouse-1"/></i>
                         <span style="margin-left: 20px;">Reports</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
                     <a href="Orders.html" class="sidebar-link">
-                        <i><img height="25px" width="25px" src="images/icons8-order-50.png" alt="warehouse-1"/></i>
+                        <i><img height="25px" width="25px" src="\InvenHub-Frontend\static\images/icons8-order-50.png" alt="warehouse-1"/></i>
                         <span style="margin-left: 20px;">Orders</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
                     <a href="new_sale.html" class="sidebar-link">
-                        <i><img height="25px" width="25px" src="images/icons8-plus.svg" alt="warehouse-1"/></i>
+                        <i><img height="25px" width="25px" src="\InvenHub-Frontend\static\images/icons8-plus.svg" alt="warehouse-1"/></i>
                         <span style="margin-left: 20px;">New Sale</span>
                     </a>
                 </li>
             </ul>
             <div class="sidebar-footer">
                 <a href="#" class="sidebar-link">
-                    <i><img height="25px" width="25px" src="images/icons8-settings.svg" alt="warehouse-1"/></i>
+                    <i><img height="25px" width="25px" src="\InvenHub-Frontend\static\images/icons8-settings.svg" alt="warehouse-1"/></i>
                     <span style="margin-left: 20px;">Settings</span>
                 </a>
             </div>
             <div class="sidebar-footer">
                 <a href="" class="sidebar-link">
-                    <i><img height="25px" width="25px" src="images/icons8-logout-50 (1).png" alt="warehouse-1"/></i>
+                    <i><img height="25px" width="25px" src="\InvenHub-Frontend\static\images/icons8-logout-50 (1).png" alt="warehouse-1"/></i>
                     <span style="margin-left: 20px;">Logout</span>
                 </a>
             </div>
@@ -121,7 +121,7 @@
                         <div class="col">
                             <div class="dropdown dropleft">
                                 <a class="notification-icon position-relative" id="notificationDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-                                    <i><img height="30px" width="28px" src="images/icons8-notification (3).svg" alt=""></i>
+                                    <i><img height="30px" width="28px" src="\InvenHub-Frontend\static\images/icons8-notification (3).svg" alt=""></i>
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="notificationDropdown">
                                     <li class="dropdown-header">Notifications</li>
@@ -133,7 +133,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col"><a href="account_details.html"><img height="30px" width="28px" src="images/icons8-account-50.png" alt=""></a></div>
+                        <div class="col"><a href="account_details.html"><img height="30px" width="28px" src="\InvenHub-Frontend\static\images/icons8-account-50.png" alt=""></a></div>
                     </div>
                 </div>
             </div>
@@ -298,6 +298,6 @@ new Chart("myChart", {
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
-    <script src="dasboard.js"></script>
+    <script src="\InvenHub-Frontend\static\js\dasboard.js"></script>
 </body>
 </html>
